--- a/styling/members.css
+++ b/styling/members.css
@@ -9,7 +9,6 @@ body {
     font-size: 20px;
     margin:0;
     text-align: center;
-    cursor: default;
 }
 h1 {
     font-family: lovelo;
@@ -29,16 +28,14 @@ nav {
     border-top: 3px lightgrey solid;
     border-bottom: 3px lightgrey solid;
 }
-a { 
-    text-decoration: none; /* remove default link underline */
-}
-header a {
-    color: white;
-}
 nav a {
     padding:0px 10px;
 }
-nav a:hover {
+a {
+    text-decoration: none;
+    color: white;
+}
+a:hover {
     transition: 0.5s;
     background: #0d0d0d;
     border-radius: 5px;
@@ -51,17 +48,6 @@ em {
     text-decoration: underline;
     text-transform: uppercase;
     color: grey;
-}
-footer {
-    position: sticky;
-    background-color: rgb(78, 78, 78, 0.7);
-    padding: 15px 0;
-}
-footer a {
-    color: white;
-}
-footer i {
-    width: 1.45em;
 }
 
 
@@ -80,3 +66,40 @@ footer i {
     top: 0;
     width: 100%;
 }
+
+
+.member-row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 150px;
+  }
+  
+/* Create four equal columns that sits next to each other */
+.member-column {
+    flex: 15%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+
+.member-column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .member-column {
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .member-column {
+        flex: 100%;
+        max-width: 100%;
+    }
+}
+
