--- a/styling/auditions.css
+++ b/styling/auditions.css
@@ -1,13 +1,19 @@
-.form-container {
+.form-container.active {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 13px;
     display: flex;
     flex-direction: column;
 }
-
-.form-container label {
+.form-container label,
+.form-container h3 {
     font-weight: 550;
     padding-top: 15px;
+    align-self: start;
+    text-align: left;
+}
+.form-container span {
+    color: rgb(129, 129, 129);
+    font-weight: 550;
     align-self: start;
     text-align: left;
 }
@@ -15,7 +21,6 @@
 .form-container label span {
     font-weight: 400;
 }
-
 .form-container input[type="text"],
 .form-container input[type="number"],
 .form-container input[type="time"],
@@ -26,6 +31,14 @@
     padding: 0.5em;
     border: 1px grey solid;
     border-radius: 3px;
+}
+
+.form-container input[type="file"]{
+    margin-top: 5px;
+}
+.form-container input[type="file"]:hover,
+.form-container input[type="file"]:active {
+    cursor: pointer;
 }
 
 /* Customized radio buttons */
@@ -46,6 +59,7 @@
     cursor: pointer;
 }
 
+/* Skill Slider */
 .skill-slider {
     cursor: pointer;
     -webkit-appearance: none;
@@ -54,7 +68,6 @@
     width: 100%;
     height: 4px;
     cursor: pointer;
-    animate: 0.2s;
     background: #03a9f4;
     border-radius: 25px;
 }
@@ -68,7 +81,6 @@
     -webkit-appearance: none;
     margin-top: -8px;
 }
-
 .slider-wrap {
     display: flex;
     flex-direction: column;
@@ -77,6 +89,52 @@
     align-self: flex-start;
     margin-bottom: 10px;
 }
+
 textarea {
     resize: none;
+}
+
+/* Multi-step form */
+.form-container {
+    display: none;
+}
+.form-control {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 15px 0;
+}
+button[type="submit"] {
+    display: none;
+}
+.form-control button {
+    padding: 8px;
+    background-color: lightgray;
+    color: darkgrey;
+    border: 1px solid darkgrey;
+    border-radius: 5px;
+}
+.form-control button.active:hover,
+.form-control button.active:active {
+    cursor: pointer;
+}
+.form-control button.active {
+    background-color: lightsteelblue;
+    color: white;
+}
+.step {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbbbbb;
+    border: none;
+    border-radius: 50%;
+    display: inline-block;
+    opacity: 0.5;
+  }
+.step.active {
+    opacity: 1;
+}
+.step.finish {
+    background-color: lightblue;
 }
