--- a/styling/general.css
+++ b/styling/general.css
@@ -52,6 +52,7 @@ nav a:hover {
 main {
     min-height: 90vh;
     margin: 25px 40px;
+    font-size: 14px;
 }
 em {
     font-weight: 550;
@@ -71,7 +72,13 @@ footer a {
 footer i {
     width: 1.45em;
 }
-
+button:hover,
+button:focus {
+    cursor: pointer;
+}
+button:active {
+    opacity: 0.5;
+}
 
 /* Specific classes */
 .header-logo {
