--- a/styling/general.css
+++ b/styling/general.css
@@ -3,74 +3,55 @@
     font-family: "Lovelo-bold";
 }
 
-/* For Index Page*/
+@font-face {
+    src: url(../fonts/Lato-Regular.ttf);
+    font-family: "Lato";
+}
+
+@font-face {
+    src: url(../fonts/Lato-Light.ttf);
+    font-family: "Lato-light";
+}
+
+/* ------------------------- 
+    GENERAL
+------------------------- */
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 body {
-    font-family: "Lato",sans-serif;
+    font-size: 14px;
+    font-family: "Lato";
     text-align: center;
     background: #F1F1F1;
+    background-image: linear-gradient(
+        rgb(180, 180, 180),
+        rgb(230, 230, 230),
+        rgb(245, 245, 245),
+        rgb(250, 250, 250),
+        rgb(245, 245, 245),
+        rgb(230, 230, 230),
+        rgb(180, 180, 180),
+        rgb(130, 130, 130)
+    );
+    height: 100%;
 }
 a { 
-    text-decoration: none; /* remove default link underline */
+    text-decoration: none;
 }
-header {
-    font-family: 'Squada One', cursive;
-    width: 100%;
-    height: auto;
-    min-height: 10vh;
-}
-header a {
-    color: white;
-}
-h1 { /* Hidden display for smaller viewports */
+h1 {
     font-family: "Lovelo-bold";
     font-size: 60px;
     color: #1A1C23;
     display: none;
     padding: 15px 0;
 }
-nav {
-    background: #1A1C23;
-    padding:5px;
-    font-weight: 550;
-    text-transform: uppercase;
-}
-nav a {
-    display: block;
-    padding: 5px 0;
-}
-nav a:hover {
-    transition: 0.5s;
-    background: #0d0d0d;
-    border-radius: 5px;
-    color: lightblue;
-}
-main {
-    min-height: 90vh;
-    margin: 25px 40px;
-    font-size: 14px;
-}
 em {
     font-weight: 550;
     text-transform: uppercase;
     color: grey;
-}
-footer {
-    width: 100%;
-    background-color: rgb(78, 78, 78, 0.7);
-    padding: 10px 0;
-    margin-top: 15px;
-    font-size: 24px;
-}
-footer a {
-    color: white;
-}
-footer i {
-    width: 1.45em;
 }
 button:hover,
 button:focus {
@@ -80,57 +61,132 @@ button:active {
     opacity: 0.5;
 }
 
-/* Specific classes */
-.header-logo {
-    max-width: 50%;
-}
-.lastest-cover {
-    overflow: hidden;
-    padding-top: 56.25%;
-    position: relative;
-}
-.lastest-cover iframe {
-    border: 0;
-    height: 100%;
-    position: absolute;
-    left: 0;
+/* ------------------------- 
+    HEADER & NAVIGATION
+------------------------- */
+header {
+    background-color: #1A1C23;
+    position: fixed;
     top: 0;
     width: 100%;
+    border-bottom: 1px solid white;
+    color: rgb(205, 205, 205);
+    z-index: 1;
+}
+.header-wrapper {
+    width: 100%;
+    min-height: 100px;
+    border-bottom: 0.5px solid rgb(75, 75, 75);
+}
+.navbar-toggle {
+    position: absolute;
+    top: 30px;
+    padding: 5px 10px;
+    margin-left: 15px;
+}
+.navbar-toggle:hover,
+.navbar-toggle:active {
+    cursor: pointer;
+}
+.navbar-icon {
+    max-width: 30px;
+}
+.header-logo {
+    height: 100px;
+    padding: 12px;
+}
+.navbar-wrapper {
+    display: none;
+    padding: 10px;
+    font-weight: 550;
+    text-transform: uppercase;
+}
+.nav-link {
+    display: block;
+    padding: 10px 15px;
+    font-family: 'Lato-light';
+    text-align: left;
+    color: rgb(205, 205, 205);
+}
+.nav-link:hover,
+.nav-link:active {
+    transition: 0.3s;
+    color: white;
 }
 
-/* Responsive Design - Width */
-@media only screen and (min-width: 520px){
-    h1 {
-        display: block;
+/* -------------------------
+    MAIN
+------------------------- */
+main {
+    width: 100%;
+    min-height: 80vh;
+    max-width: 75vmin;
+    margin: auto;
+    margin-top: 125px;
+    z-index: -1;
+}
+.page-title {
+    text-transform: uppercase;
+}
+.title-divider {
+    margin: 20px;
+}
+
+/* -------------------------
+    FOOTER
+------------------------- */
+footer {
+    position: static;
+    bottom: 0;
+    width: 100%;
+    background-color: #1A1C23;
+    padding: 25px 0;
+}
+.copyright {
+    font-family: "Lato-light";
+    font-size: 14px;
+    color: white;
+}
+.footer-links {
+    margin-top: 10px;
+}
+.social-media-icon {
+    max-width: 30px;
+}
+
+@media only screen and (max-width: 200px){
+    .logo-container {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 800px){
+    .header-container {
+        display: grid;
+        max-width: 1000px;
+        margin: auto;
+        grid-template-columns: 1fr 2fr;
+    }
+    .header-wrapper {
+        align-self: flex-start;
+    }
+    .navbar-toggle {
+        display: none;
     }
     .logo-container {
-        margin: 0 10vw;
+        text-align: right;
     }
-    .header-logo {
-        position: absolute;
-        left: 15vw;
-        top: 10px;
-        max-width: 80px;
-        float: left;
+    .navbar-wrapper {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
     }
-}
-
-@media only screen and (min-width: 600px){
-    main {
-        min-width: 560px;
-        max-width: 850px;
-        width: 60%;
-        margin: auto;
-        padding-top: 50px;
+    .nav-link {
+        text-align: center;
     }
-}
-
-@media only screen and (min-width: 840px){
-    header {
-        background-color: grey;
-    }
-    nav a {
-        display: inline;
-        margin: 20px 10px;
+    .nav-link:hover,
+    .nav-link:active {
+        transition: 0.1s;
+        border-bottom: 1px solid white;
     }
 }
