--- a/components/footer-component.html
+++ b/components/footer-component.html
@@ -3,12 +3,12 @@
 </div>
 <div class="footer-links">
     <a href="https://www.youtube.com/channel/UCN76HJCEOipjDLIB5bYMexw/" target="_blank">
-        <img class="social-media-icon" icon="youtube" src="../images/icons/youtube.png">
+        <img class="social-media-icon" icon="youtube" alt="youtube link" src="../images/icons/youtube.png">
     </a>
     <a href="https://www.instagram.com/neverofficialyyc/" target="_blank">
-        <img class="social-media-icon" icon="instagram" src="../images/icons/instagram.png">
+        <img class="social-media-icon" icon="instagram" alt="instagram link" src="../images/icons/instagram.png">
     </a>
     <a href="https://www.facebook.com/neverofficialyyc/" target="_blank">
-        <img class="social-media-icon" icon="facebook" src="../images/icons/facebook.png">
+        <img class="social-media-icon" icon="facebook" alt="facebook link" src="../images/icons/facebook.png">
     </a>
 </div>
