--- a/components/header-component.html
+++ b/components/header-component.html
@@ -6,12 +6,12 @@
         <div class="logo-container">
             <a href="index.html">
                 <img src="../images/logos/never-transparent.png" alt="Never" class="header-logo">
-                <h1>Never</h1>
+                <!-- <h1>Never</h1> -->
             </a>
         </div>
     </div>
     <nav class="navbar-wrapper">
-        <a class="nav-link" href="index.html">about us</a>
+        <a class="nav-link" href="about.html">about us</a>
         <a class="nav-link" href="members.html">members</a>
         <a class="nav-link" href="audition.html">audition</a>
         <a class="nav-link" href="contact.html">contact us</a>
