--- a/styling/common/forms.css
+++ b/styling/common/forms.css
@@ -13,3 +13,37 @@ textarea, select {
 textarea {
     resize: none;
 }
+.form-element {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 1px solid rgb(209, 209, 209);
+    padding: 5px;
+}
+.form-label {
+    font-family: "Roboto-condensed";
+    align-self: start;
+    text-transform: uppercase;
+    font-weight: 550;
+    color: dimgrey;
+    margin: 0;
+    padding: 2px;
+}
+.form-input {
+    padding: 5px 2px;
+}
+.form-input:focus {
+    outline: none;
+}
+
+
+@keyframes animation-name {
+    from {property1: value1; property2: value2;}
+    to {property3: value3;}
+}
+
+@keyframes animation-name {
+    0% {property: value;}
+    20% {property: value;}
+    100% {property: value;}
+}
