--- a/styling/page/about.css
+++ b/styling/page/about.css
@@ -1,7 +1,7 @@
-main {
+.main-container {
     max-width: unset;
 }
-.main-container {
+.main-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,9 +20,9 @@ main {
 }
 
 @media only screen and (min-width: 650px){
-    /* main {
-        max-width: 85vmin;
-    } */
+    .main-container {
+        max-width: 100vmin;
+    }
     .flex-element {
         padding: 0 10vmin;
     }
@@ -30,3 +30,4 @@ main {
         max-width: 1200px;
     }
 }
+
