--- a/styling/common/forms.css
+++ b/styling/common/forms.css
@@ -19,6 +19,18 @@ textarea {
     background-color: white;
     border: 1px solid rgb(209, 209, 209);
     padding: 5px;
+    transition: border-color 1s;
+}
+.form-element.error {
+    border-color: red;
+    transition: border-color 1s;
+}
+.form-label > span {
+    font-size: 12px;
+    line-height: 19px;
+    padding-left: 10px;
+    vertical-align: middle;
+    font-family: "Roboto-light";
 }
 .form-label {
     font-family: "Roboto-condensed";
