--- a/styling/page/contact.css
+++ b/styling/page/contact.css
@@ -6,7 +6,31 @@
     flex-direction: column;
 }
 .form-container {
-    margin-top: 15px;
+    margin-top: 30px;
     display: grid;
     row-gap: 10px;
+}
+.button-container {
+    margin-top: 25px;
+}
+.success-message {
+    display: none;
+    padding: 15px;  
+}
+.success-message span {
+    font-size: 32px;
+    font-family: 'Roboto-condensed';
+    text-transform: uppercase;
+}
+select.form-input {
+    color: grey;
+}
+footer {
+    margin-top:25px;
+}
+
+@media only screen and (min-height: 830px){
+    footer {
+        margin-top: unset;
+    }
 }
